# tcp_c2_rviz

./: .gitignore  Readme.docx  Readme.md  RvizMotoman.vsd
src/cmdinterpreter/: CMakeLists.txt  package.xml  visualize.rviz
src/cmdinterpreter/config/: cmdinterpreter.ini
src/cmdinterpreter/include/cmdinterpreter/: AsioSocketCmdLine.h  Conversions.h  Debug.h  Globals.h  JointStateUpdater.h  RvizMarker.h  SampleAsioCmdLine.txt
src/cmdinterpreter/include/cmdinterpreter/NIST/: Boost.h  CMath.h  Config.h  RCSMsgQueue.h  RCSMsgQueueThread.h  RCSThreadTemplate.h  UrdfKinematics.cpp  UrdfKinematics.h
src/cmdinterpreter/launch/: demo.launch  rviz.launch  simple (copy).launch  simple.launch
src/cmdinterpreter/python/: motoman.txt  socketcmdline.py
src/cmdinterpreter/src/: Conversions.cpp  RvizMarker.cpp  main.cpp
src/fanuc_lrmate200id_support/: CMakeLists.txt
src/fanuc_lrmate200id_support/config/: joint_names_lrmate200id.yaml  planning_groups.yaml
src/fanuc_lrmate200id_support/urdf/: lrmate200id.urdf  lrmate200id.xacro  lrmate200idorig.urdf
src/kuka_lwr_support/: CMakeLists.txt  package.xml
src/kuka_lwr_support/model/: kuka_lwr.urdf.xacro
src/kuka_lwr_support/robot/: kuka_description.urdf  lwr_on_box.urdf.xacro
src/kuka_lwr_support/urdf/: kuka_description.urdf  kuka_description.urdf (copy).xacro  kuka_description.urdf.xacro  lwr_on_box.urdf.xacro
src/motoman_sia20d_support/urdf/: sia20d_macro.xacro
src/robotconfig/: CMakeLists.txt  package.xml  visualize.rviz
src/robotconfig/config/: motoman.srdf
src/robotconfig/launch/: demo.launch  rviz.launch
src/robotconfig/urdf/: motomanrobot.xacro
