<?xml version="1.0"?>
<package format="2">
  <name>robotconfig</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS package to control configuration of  Fanuc LR Mate 200iD, Motoman SIA20d and Robotiq C2 gripper.
    </p>
  </description>
  <author email="john.michaloski@nist.gov">John Michaloski(NIST)</author>
  <maintainer email="john.michaloski@nist.gov">John Michaloski(NIST)</maintainer>

  <license>NO copyright</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_sia20d_support</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
         <tag>motoman</tag>
         <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>lrmate200id</tag>
      </tags>
    </rosindex>
  </export>
</package>
